2004-01-28  Theodore A. Roth  <troth@openavr.org>
[Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>]

	* configure.ac (AC_INIT): Bump version.
	* src/ioreg.cc (atmega162_io_registers): Define.
	* src/ioreg.h (atmega162_io_registers): Declare.
	* src/jtagio.cc (deviceDefinitions): Install mega162 io register defs.

2004-01-21  Theodore A. Roth  <troth@openavr.org>
[Contributed by Bjoern Haase <bjoern.m.haase@web.de>]

	* configure.ac (AC_INIT): Bump version.
	* src/ioreg.cc: Fix spelling error.
	Add cvs Id keyword.
	(atmega169_io_registers): Define.
	* src/ioreg.h: Fix spelling error.
	Add cvs Id keyword.
	(atmega169_io_registers): Declare.
	* src/jtagio.cc (deviceDefinitions): Install mega169 io register defs.

2003-12-12  Theodore A. Roth  <troth@openavr.org>

	* Release version 2.2.

2003-12-12  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Set version to 2.2.

2003-12-08  Theodore A. Roth  <troth@openavr.org>

	* src/main.cc (usage): Fix host name and port spec to denote that
	host name, not port, is the optional part of host:port. 

2003-12-08  Theodore A. Roth  <troth@openavr.org>
[Contributed by Kolja Waschk <avus@ixo.de>]

	* configure.ac (AC_INIT): Bump version.
	* src/gnu_getopt.h: Protect against cygwin having already included 
	getop.h.
	* src/jtagio.cc (timeout_read): If either select() of read() fail and
	errno is set to EAGAIN, continue the loop instead of bombing out.
	* src/jtagrun.cc (jtagContinue): Use timeout_read() instead of read().

2003-12-06  Theodore A. Roth  <troth@openavr.org>

	* configure.ac (AC_INIT): Bump version.
	* avarice.spec.in (%files): Add avarice man page.
	* doc/Makefile.am (man_MANS): Add avarice.1.
	(EXTRA_DIST): Remove install.txt.
	* doc/avarice.1: New file.
	* doc/install.txt: Remove file. This file talks about Aegis being the
	build system which is no longer true since we use autoconf/automake.
	* doc/running.txt: Add note about this file being out of date.