@@ -1,3 +1,8 @@
+2004-01-29  Theodore A. Roth  <troth@openavr.org>
+
+	* configure.ac (AC_INIT): Bump version.
+	* scripts/io_gen.py: New file for helping to generate io register defs.
+
 2004-01-28  Theodore A. Roth  <troth@openavr.org>
 [Contributed by Nils Kristian Strom <nilsst@omegav.ntnu.no>]
 
